deps/chakrashim/core/test/strict/strictargs3-deferred.baseline
SyntaxError: Invalid usage of 'arguments' in strict mode
	at code (strictargs3-deferred.js:8:61)
